# tycho-simulation-server

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.broadcaster-service  Dockerfile.simulator-service  LICENSE  README.md  STRESS_TEST_README.md  cdk.json  hashflow_supported_tokens.csv  liquorice_supported_tokens.csv  package-lock.json  package.json  release-please-config.json  review_guide.md  run_stress_test.sh  simulator-manifest.toml  stress_test.py  token_diff.json  tsconfig.json
.github/workflows/: auto-merge-releases.yaml  ci.yml  deploy.yml  release-deploy.yaml  release-please.yaml
crates/apps/: Cargo.toml
crates/apps/src/: lib.rs
crates/apps/src/sim_analysis/: mod.rs  report.rs
crates/apps/tests/integration/: encode_route.rs  protocol_reset_memory.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: config.rs  lib.rs  metrics.rs
crates/rpc/src/api/: broadcaster.rs  mod.rs
crates/rpc/src/handlers/: broadcaster.rs  encode.rs  mod.rs  quote.rs  readiness.rs
crates/rpc/src/models/: broadcaster_rpc.rs  mod.rs
crates/rpc/src/services/: mod.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: broadcaster_service.rs  lib.rs  memory.rs  metrics.rs  simulator_service.rs  stream.rs
crates/runtime/src/config/: logging.rs  manifest.rs  mod.rs
crates/runtime/src/models/: broadcaster.rs  erc4626.rs  mod.rs  state.rs
crates/runtime/src/models/rfq/: bebop.rs  liquorice.rs  mod.rs
crates/runtime/src/services/: blocking_simulation_executor.rs  broadcaster.rs  broadcaster_sessions.rs  broadcaster_subscription.rs  encode.rs  mod.rs  quote_service.rs  quotes.rs  simulation_executor.rs  stream_builder.rs
crates/runtime/src/services/encode/: allocation.rs  backend.rs  error.rs  fixtures.rs  mocks.rs  model.rs  normalize.rs  request.rs  resimulate.rs  response.rs  tycho_swaps.rs
crates/simulator-core/: Cargo.toml
crates/simulator-core/src/: lib.rs
crates/simulator-core/src/models/: broadcaster.rs  factories.rs  messages.rs  mod.rs  protocol.rs
docs/: encode_example.md  pool-execution-risk.md  quote_service.md  simulate_example.md  slippage.md  tycho-simulation-library.md
docs/plans/: 2026-03-12-pools-endpoint-design.md  2026-03-12-pools-endpoint.md
lib/: tycho-sim-stack.ts
lib/pipeline/: pipeline-stack.ts
review-viewer/: app.js  index.html  styles.css
scripts/: coverage_sweep.py  curve_pool_simulation_check.py  encode_smoke.py  failure_profile.py  latency_percentiles.py  presets.py  run_suite.sh  simulate_smoke.py  start_server.sh  stop_server.sh  wait_ready.sh
scripts/tests/: test_simulation_harness.py
skills/simulation-service-analysis/: SKILL.md
skills/simulation-service-analysis/references/: encode.md  project.md  protocols.md
skills/simulation-service-tests/: SKILL.md
skills/simulation-service-tests/references/: deploy.md  encode.md  project.md  protocols.md  tycho-deps.md  upgrade.md
skills/simulation-service-tests/scripts/: coverage_sweep.py  latency_percentiles.py  memory_diff.py  presets.py  run_checks.sh  run_checks.zsh  run_suite.zsh  simulate_smoke.py  start_server.zsh  stop_server.zsh  wait_ready.zsh
skills/tycho-cloudwatch-logs/: SKILL.md
skills/tycho-cloudwatch-logs/references/: queries.md
skills/tycho-cloudwatch-logs/scripts/: analyze_snapshot.py  cw_env.zsh  cw_filter.zsh  cw_metrics.py  cw_metrics.zsh  cw_query.zsh  cw_query_ceiling.py  cw_streams.zsh  cw_tail.zsh  cw_time.py  cw_whoami.zsh
src/: lib.rs  main.rs  memory.rs  metrics.rs
src/api/: mod.rs
src/config/: logging.rs  memory.rs  mod.rs
src/handlers/: encode.rs  mod.rs  pools.rs  quote.rs  quote_rfq.rs  readiness.rs  stream.rs  websocket.rs
src/models/: erc4626.rs  factories.rs  messages.rs  mod.rs  protocol.rs  rfq.rs  state.rs  stream_health.rs  tokens.rs
src/models/rfq/: bebop.rs  hashflow.rs  liquorice.rs
src/services/: encode.rs  gas_price.rs  mod.rs  native_wrapped.rs  pool_runtime.rs  quotes.rs  stream_builder.rs
src/services/encode/: allocation.rs  calldata.rs  error.rs  fixtures.rs  mocks.rs  model.rs  normalize.rs  request.rs  resimulate.rs  response.rs  test_support.rs  tycho_swaps.rs  wire.rs
src/sim_analysis/: mod.rs  presets.rs  report.rs
tests/integration/: encode_route.rs  main.rs  pools_route.rs  protocol_reset_memory.rs  simulate_gas_in_sell.rs  startup_gas_price_task.rs
