[workspace]
members = [
    "crates/simulator-core",
    "crates/runtime",
    "crates/rpc",
    "crates/apps",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.91.0"
license = "MIT"
repository = "https://github.com/dewiz-xyz/dsolver-simulator"

[workspace.dependencies]
alloy-primitives = "1.5.4"
alloy-sol-types = "1.5.2"
anyhow = "1.0"
axum = "0.7"
chrono = "0.4"
csv = "1.4.0"
dotenv = "0.15.0"
futures = "0.3"
jemalloc-ctl = "0.5"
jemallocator = "0.5"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = "0.7"
tower = { version = "0.5", features = ["timeout", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tycho-common = "0.152.4"
tycho-execution = "0.165.0"
tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation", tag = "0.248.1" }
typetag = "0.2"

[workspace.lints.clippy]
dbg_macro = "deny"
unimplemented = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
allow_attributes = "deny"
unused_async = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
unnecessary_wraps = "warn"
trivially_copy_pass_by_ref = "warn"
struct_excessive_bools = "warn"
fn_params_excessive_bools = "warn"
too_many_lines = "warn"
