[package]
name = "dsolver-simulator"
version = "0.1.0"
edition = "2021"
rust-version = "1.91.0"
default-run = "dsolver-simulator-service"
description = "DSolver Simulator: fast DeFi swap simulation and route encoding on live Tycho state."
license = "MIT"
repository = "https://github.com/dewiz-xyz/dsolver-simulator"

[[bin]]
name = "dsolver-simulator-service"
path = "src/main.rs"

[dependencies]
tycho-simulation = "0.258.0"
tycho-execution = "0.165.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
num-traits = "0.2"
num-bigint = "0.4"
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
alloy-primitives = "1.5.4"
alloy-sol-types = "1.5.2"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tokio-util = "0.7"
tower = { version = "0.5", features = ["timeout", "util"] }
rand = "0.8"
jemalloc-ctl = "0.5"
jemallocator = "0.5"
tokio-stream = "0.1.18"
csv = "1.4.0"
tycho-common = "0.158.0"
typetag = "0.2"

[dev-dependencies]
chrono = "0.4"

[lints.clippy]
dbg_macro = "deny"
unimplemented = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
allow_attributes = "deny"
unused_async = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
unnecessary_wraps = "warn"
trivially_copy_pass_by_ref = "warn"
struct_excessive_bools = "warn"
fn_params_excessive_bools = "warn"
too_many_lines = "warn"
