[package]
name = "apps"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "DSolver Simulator thin app binaries and analysis harness."
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
jemallocator.workspace = true
num-bigint.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
simulator_core = { package = "simulator-core", path = "../simulator-core" }
rpc = { path = "../rpc" }
runtime = { path = "../runtime" }

[dev-dependencies]
alloy-primitives.workspace = true
chrono.workspace = true
futures.workspace = true
jemalloc-ctl.workspace = true
num-traits.workspace = true
tower.workspace = true
tycho-simulation.workspace = true
typetag.workspace = true

[lints]
workspace = true
