[package]
name = "rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "DSolver simulator RPC shell and HTTP transport adapters."

[dependencies]
axum.workspace = true
num-bigint.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tracing.workspace = true
simulator_core = { package = "simulator-core", path = "../simulator-core" }
runtime = { path = "../runtime" }

[dev-dependencies]
chrono.workspace = true
num-traits.workspace = true
tycho-simulation.workspace = true
typetag.workspace = true

[lints]
workspace = true
