[package]
name = "simulator-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared DSolver simulator core types and protocol metadata."

[dependencies]
serde.workspace = true
tycho-simulation.workspace = true

[dev-dependencies]
anyhow.workspace = true
serde_json.workspace = true

[lints]
workspace = true
